task-manager-k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smarttask-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: user.local
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - path: /api/tasks
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 8080
          - path: /api/notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8080
          - path: /api/comments
            pathType: Prefix
            backend:
              service:
                name: comment-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
